--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-numpy
-pandas
-streamlit
-scikit-learn
-pickle
-jcopml
-pip
+numpy==1.23.4
+pandas==1.5.2
+streamlit==1.17.0
+scikit-learn==1.1.3
+pickleshare==0.7.5
+jcopml==1.2.1
+pip==22.3.1
